Minor changes in Review and Comment controllers and views.

--- a/SchoolDiarySystem/Views/Comment/Index.cshtml
+++ b/SchoolDiarySystem/Views/Comment/Index.cshtml
@@ -61,7 +61,7 @@
                                         </a>
                                 }
                                 <h6 class="notice-title">
-                                    <a href="#">
+                                    <a href="@Url.Action("Details", "Comment", new { id = item.CommentID })">
                                         @Html.DisplayFor(m => item.Comment)
                                     </a>
                                 </h6>
