--- a/SchoolDiarySystem/Views/Review/Index.cshtml
+++ b/SchoolDiarySystem/Views/Review/Index.cshtml
@@ -57,6 +57,8 @@
                                             @Html.DisplayFor(m => item.Review)
                                         </a>
                                     </h6>
+                                    <div class="entry-meta"> @Html.DisplayFor(m => item.Comment.Comment)</div>
+                                    <br />
                                     <div class="entry-meta">  @Html.DisplayFor(m => item.Comment.Student.FullName) / <span>@Html.DisplayFor(m => item.Comment.Subject.SubjectTitle)</span></div>
                                 </div>
                                 }
