--- a/SchoolDiarySystem/Views/Shared/_LayoutParent.cshtml
+++ b/SchoolDiarySystem/Views/Shared/_LayoutParent.cshtml
@@ -123,122 +123,25 @@
                 <div class="sidebar-menu-content">
                     <ul class="nav nav-sidebar-menu sidebar-toggle-view">
                         <li class="nav-item">
-                            <a href="@Url.Action("Index", "Admin")" class="nav-link"><i class="flaticon-dashboard"></i><span>Dashboard</span></a>
+                            <a href="@Url.Action("Index", "Parent")" class="nav-link"><i class="flaticon-dashboard"></i><span>Dashboard</span></a>
                         </li>
-                        <li class="nav-item sidebar-nav-item">
-                            <a href="#" class="nav-link"><i class="flaticon-classmates"></i><span>Students</span></a>
-                            <ul class="nav sub-group-menu">
-                                <li class="nav-item">
-                                    <a href="@Url.Action("Index", "Student")" class="nav-link">
-                                        <i class="fas fa-angle-right"></i>All Students
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="@Url.Action("Create", "Student")" class="nav-link">
-                                        <i class="fas fa-angle-right"></i>Add Student
-                                    </a>
-                                </li>
-                            </ul>
+                        <li class="nav-item">
+                            <a href="@Url.Action("Index", "Student")" class="nav-link"><i class="flaticon-dashboard"></i><span>My Kids</span></a>
                         </li>
-                        <li class="nav-item sidebar-nav-item">
-                            <a href="#" class="nav-link">
-                                <i class="flaticon-multiple-users-silhouette"></i><span>Teachers</span>
-                            </a>
-                            <ul class="nav sub-group-menu">
-                                <li class="nav-item">
-                                    <a href="@Url.Action("Index", "Teacher")" class="nav-link">
-                                        <i class="fas fa-angle-right"></i>All Teachers
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="@Url.Action("Create", "Teacher")" class="nav-link">
-                                        <i class="fas fa-angle-right"></i>Add Teacher
-                                    </a>
-                                </li>
-                            </ul>
+                        <li class="nav-item">
+                            <a href="@Url.Action("Index", "Topic")" class="nav-link"><i class="flaticon-dashboard"></i><span>Topics</span></a>
                         </li>
-                        <li class="nav-item sidebar-nav-item">
-                            <a href="#" class="nav-link"><i class="flaticon-couple"></i><span>Parents</span></a>
-                            <ul class="nav sub-group-menu">
-                                <li class="nav-item">
-                                    <a href="@Url.Action("Index", "Parent")" class="nav-link">
-                                        <i class="fas fa-angle-right"></i>All Parents
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="@Url.Action("Create", "Parent")" class="nav-link">
-                                        <i class="fas fa-angle-right"></i>Add Parent
-                                    </a>
-                                </li>
-                            </ul>
+                        <li class="nav-item">
+                            <a href="@Url.Action("Index", "Absence")" class="nav-link"><i class="flaticon-dashboard"></i><span>Absences</span></a>
                         </li>
-                        <li class="nav-item sidebar-nav-item">
-                            <a href="#" class="nav-link">
-                                <i class="flaticon-maths-class-materials-cross-of-a-pencil-and-a-ruler"></i><span>Class</span>
-                            </a>
-                            <ul class="nav sub-group-menu">
-                                <li class="nav-item">
-                                    <a href="@Url.Action("Index", "Class")" class="nav-link">
-                                        <i class="fas fa-angle-right"></i>All Classes
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="@Url.Action("Create", "Class")" class="nav-link">
-                                        <i class="fas fa-angle-right"></i>Add New Class
-                                    </a>
-                                </li>
-                            </ul>
+                        <li class="nav-item">
+                            <a href="@Url.Action("Index", "Comment")" class="nav-link"><i class="flaticon-dashboard"></i><span>Comments</span></a>
                         </li>
-                        <li class="nav-item sidebar-nav-item">
-                            <a href="#" class="nav-link">
-                                <i class="flaticon-open-book"></i><span>Subject</span>
-                            </a>
-                            <ul class="nav sub-group-menu">
-                                <li class="nav-item">
-                                    <a href="@Url.Action("Index", "Subject")" class="nav-link">
-                                        <i class="fas fa-angle-right"></i>All Subjects
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="@Url.Action("Create", "Subject")" class="nav-link">
-                                        <i class="fas fa-angle-right"></i>Add New Subject
-                                    </a>
-                                </li>
-                            </ul>
+                        <li class="nav-item">
+                            <a href="@Url.Action("Index", "Class")" class="nav-link"><i class="flaticon-dashboard"></i><span>Class</span></a>
                         </li>
-                        <li class="nav-item sidebar-nav-item">
-                            <a href="#" class="nav-link">
-                                <i class="flaticon-calendar"></i><span>Class Schedule</span>
-                            </a>
-                            <ul class="nav sub-group-menu">
-                                <li class="nav-item">
-                                    <a href="@Url.Action("Index", "Schedule")" class="nav-link">
-                                        <i class="fas fa-angle-right"></i>All Schedule
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="@Url.Action("Create", "Schedule")" class="nav-link">
-                                        <i class="fas fa-angle-right"></i>Add New Schedule
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="nav-item sidebar-nav-item">
-                            <a href="#" class="nav-link">
-                                <i class="flaticon-bed"></i><span>Room</span>
-                            </a>
-                            <ul class="nav sub-group-menu">
-                                <li class="nav-item">
-                                    <a href="@Url.Action("Index", "Room")" class="nav-link">
-                                        <i class="fas fa-angle-right"></i>All Rooms
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="@Url.Action("Create", "Room")" class="nav-link">
-                                        <i class="fas fa-angle-right"></i>Add New Room
-                                    </a>
-                                </li>
-                            </ul>
+                        <li class="nav-item">
+                            <a href="@Url.Action("Index", "Schedule")" class="nav-link"><i class="flaticon-dashboard"></i><span>Schedule</span></a>
                         </li>
                     </ul>
                 </div>
@@ -248,6 +151,12 @@
             <!-- Footer Area End Here -->
             <!-- Sidebar Area End Here -->
             @RenderBody()
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
         </div>
         <!-- Page Area End Here -->
     </div>
